
nobase_dist_share_DATA =
nobase_nodist_share_DATA =

nobase_dist_share_DATA += \
	sounds/xde/index.theme

nobase_dist_share_DATA += \
	sounds/xde/stereo/cardshuffle.oga \
	sounds/xde/stereo/desktop-screen-lock.oga \
	sounds/xde/stereo/desktop-screen-unlock.oga \
	sounds/xde/stereo/desktop-switch.oga \
	sounds/xde/stereo/DoorClose.oga \
	sounds/xde/stereo/doorclose.oga \
	sounds/xde/stereo/DoorCreak.oga \
	sounds/xde/stereo/doorcreak.oga \
	sounds/xde/stereo/dummy-message.oga \
	sounds/xde/stereo/ednamodeandguest.oga \
	sounds/xde/stereo/game-card-shuffle.oga \
	sounds/xde/stereo/game-over.oga \
	sounds/xde/stereo/gameover.oga \
	sounds/xde/stereo/neverlookbackdarling.oga \
	sounds/xde/stereo/shutdown.oga \
	sounds/xde/stereo/startup.oga \
	sounds/xde/stereo/system-bootup.oga \
	sounds/xde/stereo/system-shutdown.oga \
	sounds/xde/stereo/weeek.oga \
	sounds/xde/stereo/whoosh1.oga \
	sounds/xde/stereo/whoosh.oga \
	sounds/xde/stereo/windowshade.oga \
	sounds/xde/stereo/window-slide.oga

nobase_dist_share_DATA += \
	sounds/freedesktop/stereo/alarm-clock-elapsed.sound \
	sounds/freedesktop/stereo/audio-channel-front-center.sound \
	sounds/freedesktop/stereo/audio-channel-front-left.sound \
	sounds/freedesktop/stereo/audio-channel-front-right.sound \
	sounds/freedesktop/stereo/audio-channel-left.sound \
	sounds/freedesktop/stereo/audio-channel-lfe.sound \
	sounds/freedesktop/stereo/audio-channel-rear-center.sound \
	sounds/freedesktop/stereo/audio-channel-rear-left.sound \
	sounds/freedesktop/stereo/audio-channel-rear-right.sound \
	sounds/freedesktop/stereo/audio-channel-right.sound \
	sounds/freedesktop/stereo/audio-channel-side-left.sound \
	sounds/freedesktop/stereo/audio-channel-side-right.sound \
	sounds/freedesktop/stereo/audio-test-signal.sound \
	sounds/freedesktop/stereo/audio-volume-change.sound \
	sounds/freedesktop/stereo/battery-caution.sound \
	sounds/freedesktop/stereo/battery-full.sound \
	sounds/freedesktop/stereo/battery-low.sound \
	sounds/freedesktop/stereo/bell.sound \
	sounds/freedesktop/stereo/bell-terminal.sound \
	sounds/freedesktop/stereo/bell-window-system.sound \
	sounds/freedesktop/stereo/busytone.sound \
	sounds/freedesktop/stereo/button-pressed.sound \
	sounds/freedesktop/stereo/button-released.sound \
	sounds/freedesktop/stereo/button-toggle-off.sound \
	sounds/freedesktop/stereo/button-toggle-on.sound \
	sounds/freedesktop/stereo/camera-focus.sound \
	sounds/freedesktop/stereo/camera-shutter.sound \
	sounds/freedesktop/stereo/complete-copy.sound \
	sounds/freedesktop/stereo/complete-download.sound \
	sounds/freedesktop/stereo/complete-media-burn.sound \
	sounds/freedesktop/stereo/complete-media-rip.sound \
	sounds/freedesktop/stereo/complete-media.sound \
	sounds/freedesktop/stereo/complete-print.sound \
	sounds/freedesktop/stereo/complete-scan.sound \
	sounds/freedesktop/stereo/complete.sound \
	sounds/freedesktop/stereo/completion-fail.sound \
	sounds/freedesktop/stereo/completion-partial.sound \
	sounds/freedesktop/stereo/completion-rotation.sound \
	sounds/freedesktop/stereo/completion-success.sound \
	sounds/freedesktop/stereo/count-down.sound \
	sounds/freedesktop/stereo/desktop-created.sound \
	sounds/freedesktop/stereo/desktop-destroyed.sound \
	sounds/freedesktop/stereo/desktop-layout-changed.sound \
	sounds/freedesktop/stereo/desktop-login.sound \
	sounds/freedesktop/stereo/desktop-logout.sound \
	sounds/freedesktop/stereo/desktop-mode-floating.sound \
	sounds/freedesktop/stereo/desktop-mode-grid.sound \
	sounds/freedesktop/stereo/desktop-mode-monocle.sound \
	sounds/freedesktop/stereo/desktop-mode.sound \
	sounds/freedesktop/stereo/desktop-mode-tiled-bottom.sound \
	sounds/freedesktop/stereo/desktop-mode-tiled-left.sound \
	sounds/freedesktop/stereo/desktop-mode-tiled-right.sound \
	sounds/freedesktop/stereo/desktop-mode-tiled.sound \
	sounds/freedesktop/stereo/desktop-mode-tiled-top.sound \
	sounds/freedesktop/stereo/desktop-screen-lock.sound \
	sounds/freedesktop/stereo/desktop-screen-unlock.sound \
	sounds/freedesktop/stereo/desktop-session-checkpoint.sound \
	sounds/freedesktop/stereo/desktop-session-create.sound \
	sounds/freedesktop/stereo/desktop-session-restore-failed.sound \
	sounds/freedesktop/stereo/desktop-session-restore.sound \
	sounds/freedesktop/stereo/desktop-session-save-failed.sound \
	sounds/freedesktop/stereo/desktop-session-save.sound \
	sounds/freedesktop/stereo/desktop-showing-hideall.sound \
	sounds/freedesktop/stereo/desktop-showing-showall.sound \
	sounds/freedesktop/stereo/desktop-showing.sound \
	sounds/freedesktop/stereo/desktop-switch-down.sound \
	sounds/freedesktop/stereo/desktop-switch-left.sound \
	sounds/freedesktop/stereo/desktop-switch-left-up.sound \
	sounds/freedesktop/stereo/desktop-switch-right-down.sound \
	sounds/freedesktop/stereo/desktop-switch-right.sound \
	sounds/freedesktop/stereo/desktop-switch-up.sound \
	sounds/freedesktop/stereo/device-added.sound \
	sounds/freedesktop/stereo/device-removed.sound \
	sounds/freedesktop/stereo/dialog-cancel.sound \
	sounds/freedesktop/stereo/dialog-error-critical.sound \
	sounds/freedesktop/stereo/dialog-error-serious.sound \
	sounds/freedesktop/stereo/dialog-error.sound \
	sounds/freedesktop/stereo/dialog-information.sound \
	sounds/freedesktop/stereo/dialog-ok.sound \
	sounds/freedesktop/stereo/dialog-question.sound \
	sounds/freedesktop/stereo/dialog-warning.sound \
	sounds/freedesktop/stereo/dialtone.sound \
	sounds/freedesktop/stereo/drag-accept.sound \
	sounds/freedesktop/stereo/drag-fail.sound \
	sounds/freedesktop/stereo/drag-start.sound \
	sounds/freedesktop/stereo/dummy-message.sound \
	sounds/freedesktop/stereo/expander-toggle-off.sound \
	sounds/freedesktop/stereo/expander-toggle-on.sound \
	sounds/freedesktop/stereo/file-trash.sound \
	sounds/freedesktop/stereo/game-card-shuffle.sound \
	sounds/freedesktop/stereo/game-computer-move.sound \
	sounds/freedesktop/stereo/game-human-move.sound \
	sounds/freedesktop/stereo/game-over-loser.sound \
	sounds/freedesktop/stereo/game-over-winner.sound \
	sounds/freedesktop/stereo/item-deleted.sound \
	sounds/freedesktop/stereo/item-selected.sound \
	sounds/freedesktop/stereo/lid-close.sound \
	sounds/freedesktop/stereo/lid-open.sound \
	sounds/freedesktop/stereo/link-pressed.sound \
	sounds/freedesktop/stereo/link-released.sound \
	sounds/freedesktop/stereo/menu-click.sound \
	sounds/freedesktop/stereo/menu-popdown.sound \
	sounds/freedesktop/stereo/menu-popup.sound \
	sounds/freedesktop/stereo/menu-replace.sound \
	sounds/freedesktop/stereo/message-new-email.sound \
	sounds/freedesktop/stereo/message-new-instant.sound \
	sounds/freedesktop/stereo/message-new.sound \
	sounds/freedesktop/stereo/message-new-voicemail.sound \
	sounds/freedesktop/stereo/message-sent-email.sound \
	sounds/freedesktop/stereo/message-sent-instant.sound \
	sounds/freedesktop/stereo/message.sound \
	sounds/freedesktop/stereo/network-connectivity-error.sound \
	sounds/freedesktop/stereo/network-connectivity-established.sound \
	sounds/freedesktop/stereo/network-connectivity-lost.sound \
	sounds/freedesktop/stereo/newmail.sound \
	sounds/freedesktop/stereo/newmessage.sound \
	sounds/freedesktop/stereo/notebook-tab-changed.sound \
	sounds/freedesktop/stereo/phone-failure.sound \
	sounds/freedesktop/stereo/phone-hangup.sound \
	sounds/freedesktop/stereo/phone-incoming-call.sound \
	sounds/freedesktop/stereo/phone-outgoing-busy.sound \
	sounds/freedesktop/stereo/phone-outgoing-calling.sound \
	sounds/freedesktop/stereo/power-plug.sound \
	sounds/freedesktop/stereo/power-unplug-battery-low.sound \
	sounds/freedesktop/stereo/power-unplug.sound \
	sounds/freedesktop/stereo/ring.sound \
	sounds/freedesktop/stereo/screen-brighter.sound \
	sounds/freedesktop/stereo/screen-capture-complete.sound \
	sounds/freedesktop/stereo/screen-capture.sound \
	sounds/freedesktop/stereo/screen-darker.sound \
	sounds/freedesktop/stereo/scroll-down-end.sound \
	sounds/freedesktop/stereo/scroll-down.sound \
	sounds/freedesktop/stereo/scroll-left-end.sound \
	sounds/freedesktop/stereo/scroll-left.sound \
	sounds/freedesktop/stereo/scroll-right-end.sound \
	sounds/freedesktop/stereo/scroll-right.sound \
	sounds/freedesktop/stereo/scroll-up-end.sound \
	sounds/freedesktop/stereo/scroll-up.sound \
	sounds/freedesktop/stereo/search-results-empty.sound \
	sounds/freedesktop/stereo/search-results.sound \
	sounds/freedesktop/stereo/service-login.sound \
	sounds/freedesktop/stereo/service-logout.sound \
	sounds/freedesktop/stereo/software-update-available.sound \
	sounds/freedesktop/stereo/software-update-urgent.sound \
	sounds/freedesktop/stereo/startup.sound \
	sounds/freedesktop/stereo/suspend-error.sound \
	sounds/freedesktop/stereo/suspend-resume.sound \
	sounds/freedesktop/stereo/suspend-start.sound \
	sounds/freedesktop/stereo/system-bootup.sound \
	sounds/freedesktop/stereo/system-ready.sound \
	sounds/freedesktop/stereo/system-shutdown-reboot.sound \
	sounds/freedesktop/stereo/system-shutdown.sound \
	sounds/freedesktop/stereo/test.sound \
	sounds/freedesktop/stereo/thermal-caution.sound \
	sounds/freedesktop/stereo/thermal-cool.sound \
	sounds/freedesktop/stereo/thermal-hot.sound \
	sounds/freedesktop/stereo/tooltip-popdown.sound \
	sounds/freedesktop/stereo/tooltip-popup.sound \
	sounds/freedesktop/stereo/trash-empty.sound \
	sounds/freedesktop/stereo/voicemail.sound \
	sounds/freedesktop/stereo/window-attention-active.sound \
	sounds/freedesktop/stereo/window-attention-inactive.sound \
	sounds/freedesktop/stereo/window-attention.sound \
	sounds/freedesktop/stereo/window-close-kill-process.sound \
	sounds/freedesktop/stereo/window-close-kill-server.sound \
	sounds/freedesktop/stereo/window-close-kill.sound \
	sounds/freedesktop/stereo/window-close.sound \
	sounds/freedesktop/stereo/window-decorated.sound \
	sounds/freedesktop/stereo/window-inactive-click.sound \
	sounds/freedesktop/stereo/window-lower-below.sound \
	sounds/freedesktop/stereo/window-lower.sound \
	sounds/freedesktop/stereo/window-maximized-filled.sound \
	sounds/freedesktop/stereo/window-maximized-fullscreen.sound \
	sounds/freedesktop/stereo/window-maximized-horizontal.sound \
	sounds/freedesktop/stereo/window-maximized-left.sound \
	sounds/freedesktop/stereo/window-maximized-right.sound \
	sounds/freedesktop/stereo/window-maximized.sound \
	sounds/freedesktop/stereo/window-maximized-vertical.sound \
	sounds/freedesktop/stereo/window-minimized-hidden.sound \
	sounds/freedesktop/stereo/window-minimized.sound \
	sounds/freedesktop/stereo/window-move-end-attract.sound \
	sounds/freedesktop/stereo/window-move-end-repel.sound \
	sounds/freedesktop/stereo/window-move-end.sound \
	sounds/freedesktop/stereo/window-move-start.sound \
	sounds/freedesktop/stereo/window-move-start-unattract.sound \
	sounds/freedesktop/stereo/window-move-start-unrepel.sound \
	sounds/freedesktop/stereo/window-new.sound \
	sounds/freedesktop/stereo/window-ping.sound \
	sounds/freedesktop/stereo/window-question.sound \
	sounds/freedesktop/stereo/window-raise-above.sound \
	sounds/freedesktop/stereo/window-raise.sound \
	sounds/freedesktop/stereo/window-resize-end-attract.sound \
	sounds/freedesktop/stereo/window-resize-end-repel.sound \
	sounds/freedesktop/stereo/window-resize-end.sound \
	sounds/freedesktop/stereo/window-resize-start.sound \
	sounds/freedesktop/stereo/window-resize-start-unattract.sound \
	sounds/freedesktop/stereo/window-resize-start-unrepel.sound \
	sounds/freedesktop/stereo/window-slide-in.sound \
	sounds/freedesktop/stereo/window-slide-in-taketo.sound \
	sounds/freedesktop/stereo/window-slide-in-unshade.sound \
	sounds/freedesktop/stereo/window-slide-out-sendto.sound \
	sounds/freedesktop/stereo/window-slide-out-shade.sound \
	sounds/freedesktop/stereo/window-slide-out.sound \
	sounds/freedesktop/stereo/window-slide.sound \
	sounds/freedesktop/stereo/windows-slide.sound \
	sounds/freedesktop/stereo/window-stack-lower-below.sound \
	sounds/freedesktop/stereo/window-stack-lower.sound \
	sounds/freedesktop/stereo/window-stack-raise-above.sound \
	sounds/freedesktop/stereo/window-stack-raise.sound \
	sounds/freedesktop/stereo/window-stack.sound \
	sounds/freedesktop/stereo/window-stick-pinned.sound \
	sounds/freedesktop/stereo/window-stick.sound \
	sounds/freedesktop/stereo/window-stick-unfloat.sound \
	sounds/freedesktop/stereo/window-switch-left.sound \
	sounds/freedesktop/stereo/window-switch-right.sound \
	sounds/freedesktop/stereo/window-switch.sound \
	sounds/freedesktop/stereo/window-switch-zoom.sound \
	sounds/freedesktop/stereo/window-undecorated.sound \
	sounds/freedesktop/stereo/window-unmaximized-fullscreen.sound \
	sounds/freedesktop/stereo/window-unmaximized-horizontal.sound \
	sounds/freedesktop/stereo/window-unmaximized-left.sound \
	sounds/freedesktop/stereo/window-unmaximized-right.sound \
	sounds/freedesktop/stereo/window-unmaximized.sound \
	sounds/freedesktop/stereo/window-unmaximized-unfilled.sound \
	sounds/freedesktop/stereo/window-unmaximized-vertical.sound \
	sounds/freedesktop/stereo/window-unminimized.sound \
	sounds/freedesktop/stereo/window-unminimized-unhidden.sound \
	sounds/freedesktop/stereo/window-unstick-float.sound \
	sounds/freedesktop/stereo/window-unstick.sound \
	sounds/freedesktop/stereo/window-unstick-unpinned.sound \
	sounds/freedesktop/stereo/window-urgent.sound \
	sounds/freedesktop/stereo/workspace-created.sound \
	sounds/freedesktop/stereo/workspace-destroyed.sound

nobase_dist_share_DATA += \
	sounds/flite-F/index.theme

nobase_dist_share_DATA += \
	sounds/flite-F/stereo/alarm-clock-elapsed.ogg \
	sounds/flite-F/stereo/audio-channel-front-center.ogg \
	sounds/flite-F/stereo/audio-channel-front-left.ogg \
	sounds/flite-F/stereo/audio-channel-front-right.ogg \
	sounds/flite-F/stereo/audio-channel-left.ogg \
	sounds/flite-F/stereo/audio-channel-lfe.ogg \
	sounds/flite-F/stereo/audio-channel-rear-center.ogg \
	sounds/flite-F/stereo/audio-channel-rear-left.ogg \
	sounds/flite-F/stereo/audio-channel-rear-right.ogg \
	sounds/flite-F/stereo/audio-channel-right.ogg \
	sounds/flite-F/stereo/audio-channel-side-left.ogg \
	sounds/flite-F/stereo/audio-channel-side-right.ogg \
	sounds/flite-F/stereo/audio-test-signal.oga \
	sounds/flite-F/stereo/audio-volume-change.ogg \
	sounds/flite-F/stereo/battery-caution.ogg \
	sounds/flite-F/stereo/battery-full.ogg \
	sounds/flite-F/stereo/battery-low.ogg \
	sounds/flite-F/stereo/bell.oga \
	sounds/flite-F/stereo/bell-terminal.oga \
	sounds/flite-F/stereo/bell-window-system.oga \
	sounds/flite-F/stereo/busytone.ogg \
	sounds/flite-F/stereo/button-pressed.oga \
	sounds/flite-F/stereo/button-released.oga \
	sounds/flite-F/stereo/button-toggle-off.oga \
	sounds/flite-F/stereo/button-toggle-on.oga \
	sounds/flite-F/stereo/camera-focus.ogg \
	sounds/flite-F/stereo/camera-shutter.ogg \
	sounds/flite-F/stereo/complete-copy.ogg \
	sounds/flite-F/stereo/complete-download.ogg \
	sounds/flite-F/stereo/complete-media-burn.ogg \
	sounds/flite-F/stereo/complete-media.oga \
	sounds/flite-F/stereo/complete-media-rip.ogg \
	sounds/flite-F/stereo/complete.ogg \
	sounds/flite-F/stereo/complete-print.ogg \
	sounds/flite-F/stereo/complete-scan.ogg \
	sounds/flite-F/stereo/completion-fail.oga \
	sounds/flite-F/stereo/completion-partial.oga \
	sounds/flite-F/stereo/completion-rotation.oga \
	sounds/flite-F/stereo/completion-success.oga \
	sounds/flite-F/stereo/count-down.ogg \
	sounds/flite-F/stereo/desktop-created.ogg \
	sounds/flite-F/stereo/desktop-destroyed.ogg \
	sounds/flite-F/stereo/desktop-layout-changed.oga \
	sounds/flite-F/stereo/desktop-login.ogg \
	sounds/flite-F/stereo/desktop-logout.ogg \
	sounds/flite-F/stereo/desktop-mode-floating.oga \
	sounds/flite-F/stereo/desktop-mode-grid.oga \
	sounds/flite-F/stereo/desktop-mode-monocle.oga \
	sounds/flite-F/stereo/desktop-mode.oga \
	sounds/flite-F/stereo/desktop-mode-tiled-bottom.oga \
	sounds/flite-F/stereo/desktop-mode-tiled-left.oga \
	sounds/flite-F/stereo/desktop-mode-tiled.oga \
	sounds/flite-F/stereo/desktop-mode-tiled-right.oga \
	sounds/flite-F/stereo/desktop-mode-tiled-top.oga \
	sounds/flite-F/stereo/desktop-screen-lock.ogg \
	sounds/flite-F/stereo/desktop-screen-unlock.ogg \
	sounds/flite-F/stereo/desktop-session-checkpoint.oga \
	sounds/flite-F/stereo/desktop-session-create.oga \
	sounds/flite-F/stereo/desktop-session-restore-failed.oga \
	sounds/flite-F/stereo/desktop-session-restore.oga \
	sounds/flite-F/stereo/desktop-session-save-failed.oga \
	sounds/flite-F/stereo/desktop-session-save.oga \
	sounds/flite-F/stereo/desktop-showing-hideall.oga \
	sounds/flite-F/stereo/desktop-showing.oga \
	sounds/flite-F/stereo/desktop-showing-showall.oga \
	sounds/flite-F/stereo/desktop-switch-down.ogg \
	sounds/flite-F/stereo/desktop-switch-left.ogg \
	sounds/flite-F/stereo/desktop-switch-left-up.ogg \
	sounds/flite-F/stereo/desktop-switch-right-down.ogg \
	sounds/flite-F/stereo/desktop-switch-right.ogg \
	sounds/flite-F/stereo/desktop-switch-up.ogg \
	sounds/flite-F/stereo/device-added.ogg \
	sounds/flite-F/stereo/device-removed.ogg \
	sounds/flite-F/stereo/dialog-cancel.ogg \
	sounds/flite-F/stereo/dialog-error-critical.ogg \
	sounds/flite-F/stereo/dialog-error.ogg \
	sounds/flite-F/stereo/dialog-error-serious.ogg \
	sounds/flite-F/stereo/dialog-information.ogg \
	sounds/flite-F/stereo/dialog-ok.ogg \
	sounds/flite-F/stereo/dialog-question.ogg \
	sounds/flite-F/stereo/dialog-warning.ogg \
	sounds/flite-F/stereo/dialtone.ogg \
	sounds/flite-F/stereo/drag-accept.oga \
	sounds/flite-F/stereo/drag-fail.oga \
	sounds/flite-F/stereo/drag-start.oga \
	sounds/flite-F/stereo/dummy-message.ogg \
	sounds/flite-F/stereo/expander-toggle-off.oga \
	sounds/flite-F/stereo/expander-toggle-on.oga \
	sounds/flite-F/stereo/file-trash.ogg \
	sounds/flite-F/stereo/game-card-shuffle.ogg \
	sounds/flite-F/stereo/game-computer-move.ogg \
	sounds/flite-F/stereo/game-human-move.ogg \
	sounds/flite-F/stereo/game-over-loser.ogg \
	sounds/flite-F/stereo/game-over-winner.ogg \
	sounds/flite-F/stereo/item-deleted.ogg \
	sounds/flite-F/stereo/item-selected.ogg \
	sounds/flite-F/stereo/lid-close.ogg \
	sounds/flite-F/stereo/lid-open.ogg \
	sounds/flite-F/stereo/link-pressed.oga \
	sounds/flite-F/stereo/link-released.oga \
	sounds/flite-F/stereo/menu-click.oga \
	sounds/flite-F/stereo/menu-popdown.oga \
	sounds/flite-F/stereo/menu-popup.oga \
	sounds/flite-F/stereo/menu-replace.oga \
	sounds/flite-F/stereo/message-new-email.ogg \
	sounds/flite-F/stereo/message-new-instant.ogg \
	sounds/flite-F/stereo/message-new.oga \
	sounds/flite-F/stereo/message-new-voicemail.oga \
	sounds/flite-F/stereo/message.ogg \
	sounds/flite-F/stereo/message-sent-email.ogg \
	sounds/flite-F/stereo/message-sent-instant.ogg \
	sounds/flite-F/stereo/network-connectivity-error.ogg \
	sounds/flite-F/stereo/network-connectivity-established.ogg \
	sounds/flite-F/stereo/network-connectivity-lost.ogg \
	sounds/flite-F/stereo/newmail.ogg \
	sounds/flite-F/stereo/newmessage.ogg \
	sounds/flite-F/stereo/notebook-tab-changed.oga \
	sounds/flite-F/stereo/phone-failure.ogg \
	sounds/flite-F/stereo/phone-hangup.ogg \
	sounds/flite-F/stereo/phone-incoming-call.ogg \
	sounds/flite-F/stereo/phone-outgoing-busy.ogg \
	sounds/flite-F/stereo/phone-outgoing-calling.ogg \
	sounds/flite-F/stereo/power-plug.ogg \
	sounds/flite-F/stereo/power-unplug-battery-low.ogg \
	sounds/flite-F/stereo/power-unplug.ogg \
	sounds/flite-F/stereo/ring.ogg \
	sounds/flite-F/stereo/screen-brighter.oga \
	sounds/flite-F/stereo/screen-capture-complete.ogg \
	sounds/flite-F/stereo/screen-capture.ogg \
	sounds/flite-F/stereo/screen-darker.oga \
	sounds/flite-F/stereo/scroll-down-end.oga \
	sounds/flite-F/stereo/scroll-down.oga \
	sounds/flite-F/stereo/scroll-left-end.oga \
	sounds/flite-F/stereo/scroll-left.oga \
	sounds/flite-F/stereo/scroll-right-end.oga \
	sounds/flite-F/stereo/scroll-right.oga \
	sounds/flite-F/stereo/scroll-up-end.oga \
	sounds/flite-F/stereo/scroll-up.oga \
	sounds/flite-F/stereo/search-results-empty.ogg \
	sounds/flite-F/stereo/search-results.ogg \
	sounds/flite-F/stereo/service-login.ogg \
	sounds/flite-F/stereo/service-logout.ogg \
	sounds/flite-F/stereo/software-update-available.ogg \
	sounds/flite-F/stereo/software-update-urgent.ogg \
	sounds/flite-F/stereo/startup.oga \
	sounds/flite-F/stereo/suspend-error.ogg \
	sounds/flite-F/stereo/suspend-resume.ogg \
	sounds/flite-F/stereo/suspend-start.ogg \
	sounds/flite-F/stereo/system-bootup.ogg \
	sounds/flite-F/stereo/system-ready.ogg \
	sounds/flite-F/stereo/system-shutdown.ogg \
	sounds/flite-F/stereo/system-shutdown-reboot.ogg \
	sounds/flite-F/stereo/test.oga \
	sounds/flite-F/stereo/thermal-caution.oga \
	sounds/flite-F/stereo/thermal-cool.oga \
	sounds/flite-F/stereo/thermal-hot.oga \
	sounds/flite-F/stereo/tooltip-popdown.oga \
	sounds/flite-F/stereo/tooltip-popup.oga \
	sounds/flite-F/stereo/trash-empty.ogg \
	sounds/flite-F/stereo/voicemail.ogg \
	sounds/flite-F/stereo/window-attention-active.oga \
	sounds/flite-F/stereo/window-attention-inactive.oga \
	sounds/flite-F/stereo/window-attention.oga \
	sounds/flite-F/stereo/window-close-kill.oga \
	sounds/flite-F/stereo/window-close-kill-process.oga \
	sounds/flite-F/stereo/window-close-kill-server.oga \
	sounds/flite-F/stereo/window-close.oga \
	sounds/flite-F/stereo/window-decorated.oga \
	sounds/flite-F/stereo/window-inactive-click.oga \
	sounds/flite-F/stereo/window-lower-below.oga \
	sounds/flite-F/stereo/window-lower.oga \
	sounds/flite-F/stereo/window-maximized-filled.oga \
	sounds/flite-F/stereo/window-maximized-fullscreen.oga \
	sounds/flite-F/stereo/window-maximized-horizontal.oga \
	sounds/flite-F/stereo/window-maximized-left.oga \
	sounds/flite-F/stereo/window-maximized.oga \
	sounds/flite-F/stereo/window-maximized-right.oga \
	sounds/flite-F/stereo/window-maximized-vertical.oga \
	sounds/flite-F/stereo/window-minimized-hidden.oga \
	sounds/flite-F/stereo/window-minimized.oga \
	sounds/flite-F/stereo/window-move-end-attract.oga \
	sounds/flite-F/stereo/window-move-end.oga \
	sounds/flite-F/stereo/window-move-end-repel.oga \
	sounds/flite-F/stereo/window-move-start.oga \
	sounds/flite-F/stereo/window-move-start-unattract.oga \
	sounds/flite-F/stereo/window-move-start-unrepel.oga \
	sounds/flite-F/stereo/window-new.oga \
	sounds/flite-F/stereo/window-ping.oga \
	sounds/flite-F/stereo/window-question.oga \
	sounds/flite-F/stereo/window-raise-above.oga \
	sounds/flite-F/stereo/window-raise.oga \
	sounds/flite-F/stereo/window-resize-end-attract.oga \
	sounds/flite-F/stereo/window-resize-end.oga \
	sounds/flite-F/stereo/window-resize-end-repel.oga \
	sounds/flite-F/stereo/window-resize-start.oga \
	sounds/flite-F/stereo/window-resize-start-unattract.oga \
	sounds/flite-F/stereo/window-resize-start-unrepel.oga \
	sounds/flite-F/stereo/window-slide-in.oga \
	sounds/flite-F/stereo/window-slide-in-taketo.oga \
	sounds/flite-F/stereo/window-slide-in-unshade.oga \
	sounds/flite-F/stereo/window-slide.oga \
	sounds/flite-F/stereo/window-slide-out.oga \
	sounds/flite-F/stereo/window-slide-out-sendto.oga \
	sounds/flite-F/stereo/window-slide-out-shade.oga \
	sounds/flite-F/stereo/windows-slide.oga \
	sounds/flite-F/stereo/window-stack-lower-below.oga \
	sounds/flite-F/stereo/window-stack-lower.oga \
	sounds/flite-F/stereo/window-stack.oga \
	sounds/flite-F/stereo/window-stack-raise-above.oga \
	sounds/flite-F/stereo/window-stack-raise.oga \
	sounds/flite-F/stereo/window-stick.oga \
	sounds/flite-F/stereo/window-stick-pinned.oga \
	sounds/flite-F/stereo/window-stick-unfloat.oga \
	sounds/flite-F/stereo/window-switch-left.oga \
	sounds/flite-F/stereo/window-switch.oga \
	sounds/flite-F/stereo/window-switch-right.oga \
	sounds/flite-F/stereo/window-switch-zoom.oga \
	sounds/flite-F/stereo/window-undecorated.oga \
	sounds/flite-F/stereo/window-unmaximized-fullscreen.oga \
	sounds/flite-F/stereo/window-unmaximized-horizontal.oga \
	sounds/flite-F/stereo/window-unmaximized-left.oga \
	sounds/flite-F/stereo/window-unmaximized.oga \
	sounds/flite-F/stereo/window-unmaximized-right.oga \
	sounds/flite-F/stereo/window-unmaximized-unfilled.oga \
	sounds/flite-F/stereo/window-unmaximized-vertical.oga \
	sounds/flite-F/stereo/window-unminimized.oga \
	sounds/flite-F/stereo/window-unminimized-unhidden.oga \
	sounds/flite-F/stereo/window-unstick-float.oga \
	sounds/flite-F/stereo/window-unstick.oga \
	sounds/flite-F/stereo/window-unstick-unpinned.oga \
	sounds/flite-F/stereo/window-urgent.oga \
	sounds/flite-F/stereo/workspace-created.ogg \
	sounds/flite-F/stereo/workspace-destroyed.ogg

nobase_dist_share_DATA += \
	sounds/flite-M/index.theme

nobase_dist_share_DATA += \
	sounds/flite-M/stereo/alarm-clock-elapsed.oga \
	sounds/flite-M/stereo/audio-channel-front-center.oga \
	sounds/flite-M/stereo/audio-channel-front-left.oga \
	sounds/flite-M/stereo/audio-channel-front-right.oga \
	sounds/flite-M/stereo/audio-channel-left.oga \
	sounds/flite-M/stereo/audio-channel-lfe.oga \
	sounds/flite-M/stereo/audio-channel-rear-center.oga \
	sounds/flite-M/stereo/audio-channel-rear-left.oga \
	sounds/flite-M/stereo/audio-channel-rear-right.oga \
	sounds/flite-M/stereo/audio-channel-right.oga \
	sounds/flite-M/stereo/audio-channel-side-left.oga \
	sounds/flite-M/stereo/audio-channel-side-right.oga \
	sounds/flite-M/stereo/audio-test-signal.oga \
	sounds/flite-M/stereo/audio-volume-change.oga \
	sounds/flite-M/stereo/battery-caution.oga \
	sounds/flite-M/stereo/battery-full.oga \
	sounds/flite-M/stereo/battery-low.oga \
	sounds/flite-M/stereo/bell.oga \
	sounds/flite-M/stereo/bell-terminal.oga \
	sounds/flite-M/stereo/bell-window-system.oga \
	sounds/flite-M/stereo/busytone.oga \
	sounds/flite-M/stereo/button-pressed.oga \
	sounds/flite-M/stereo/button-released.oga \
	sounds/flite-M/stereo/button-toggle-off.oga \
	sounds/flite-M/stereo/button-toggle-on.oga \
	sounds/flite-M/stereo/camera-focus.oga \
	sounds/flite-M/stereo/camera-shutter.oga \
	sounds/flite-M/stereo/complete-copy.oga \
	sounds/flite-M/stereo/complete-download.oga \
	sounds/flite-M/stereo/complete-media-burn.oga \
	sounds/flite-M/stereo/complete-media.oga \
	sounds/flite-M/stereo/complete-media-rip.oga \
	sounds/flite-M/stereo/complete.oga \
	sounds/flite-M/stereo/complete-print.oga \
	sounds/flite-M/stereo/complete-scan.oga \
	sounds/flite-M/stereo/completion-fail.oga \
	sounds/flite-M/stereo/completion-partial.oga \
	sounds/flite-M/stereo/completion-rotation.oga \
	sounds/flite-M/stereo/completion-success.oga \
	sounds/flite-M/stereo/count-down.oga \
	sounds/flite-M/stereo/desktop-created.oga \
	sounds/flite-M/stereo/desktop-destroyed.oga \
	sounds/flite-M/stereo/desktop-layout-changed.oga \
	sounds/flite-M/stereo/desktop-login.oga \
	sounds/flite-M/stereo/desktop-logout.oga \
	sounds/flite-M/stereo/desktop-mode-floating.oga \
	sounds/flite-M/stereo/desktop-mode-grid.oga \
	sounds/flite-M/stereo/desktop-mode-monocle.oga \
	sounds/flite-M/stereo/desktop-mode.oga \
	sounds/flite-M/stereo/desktop-mode-tiled-bottom.oga \
	sounds/flite-M/stereo/desktop-mode-tiled-left.oga \
	sounds/flite-M/stereo/desktop-mode-tiled.oga \
	sounds/flite-M/stereo/desktop-mode-tiled-right.oga \
	sounds/flite-M/stereo/desktop-mode-tiled-top.oga \
	sounds/flite-M/stereo/desktop-screen-lock.oga \
	sounds/flite-M/stereo/desktop-screen-unlock.oga \
	sounds/flite-M/stereo/desktop-session-checkpoint.oga \
	sounds/flite-M/stereo/desktop-session-create.oga \
	sounds/flite-M/stereo/desktop-session-restore-failed.oga \
	sounds/flite-M/stereo/desktop-session-restore.oga \
	sounds/flite-M/stereo/desktop-session-save-failed.oga \
	sounds/flite-M/stereo/desktop-session-save.oga \
	sounds/flite-M/stereo/desktop-showing-hideall.oga \
	sounds/flite-M/stereo/desktop-showing.oga \
	sounds/flite-M/stereo/desktop-showing-showall.oga \
	sounds/flite-M/stereo/desktop-switch-down.oga \
	sounds/flite-M/stereo/desktop-switch-left.oga \
	sounds/flite-M/stereo/desktop-switch-left-up.oga \
	sounds/flite-M/stereo/desktop-switch-right-down.oga \
	sounds/flite-M/stereo/desktop-switch-right.oga \
	sounds/flite-M/stereo/desktop-switch-up.oga \
	sounds/flite-M/stereo/device-added.oga \
	sounds/flite-M/stereo/device-removed.oga \
	sounds/flite-M/stereo/dialog-cancel.oga \
	sounds/flite-M/stereo/dialog-error-critical.oga \
	sounds/flite-M/stereo/dialog-error.oga \
	sounds/flite-M/stereo/dialog-error-serious.oga \
	sounds/flite-M/stereo/dialog-information.oga \
	sounds/flite-M/stereo/dialog-ok.oga \
	sounds/flite-M/stereo/dialog-question.oga \
	sounds/flite-M/stereo/dialog-warning.oga \
	sounds/flite-M/stereo/dialtone.oga \
	sounds/flite-M/stereo/drag-accept.oga \
	sounds/flite-M/stereo/drag-fail.oga \
	sounds/flite-M/stereo/drag-start.oga \
	sounds/flite-M/stereo/dummy-message.oga \
	sounds/flite-M/stereo/expander-toggle-off.oga \
	sounds/flite-M/stereo/expander-toggle-on.oga \
	sounds/flite-M/stereo/file-trash.oga \
	sounds/flite-M/stereo/game-card-shuffle.oga \
	sounds/flite-M/stereo/game-computer-move.oga \
	sounds/flite-M/stereo/game-human-move.oga \
	sounds/flite-M/stereo/game-over-loser.oga \
	sounds/flite-M/stereo/game-over-winner.oga \
	sounds/flite-M/stereo/item-deleted.oga \
	sounds/flite-M/stereo/item-selected.oga \
	sounds/flite-M/stereo/lid-close.oga \
	sounds/flite-M/stereo/lid-open.oga \
	sounds/flite-M/stereo/link-pressed.oga \
	sounds/flite-M/stereo/link-released.oga \
	sounds/flite-M/stereo/menu-click.oga \
	sounds/flite-M/stereo/menu-popdown.oga \
	sounds/flite-M/stereo/menu-popup.oga \
	sounds/flite-M/stereo/menu-replace.oga \
	sounds/flite-M/stereo/message-new-email.oga \
	sounds/flite-M/stereo/message-new-instant.oga \
	sounds/flite-M/stereo/message-new.oga \
	sounds/flite-M/stereo/message-new-voicemail.oga \
	sounds/flite-M/stereo/message.oga \
	sounds/flite-M/stereo/message-sent-email.oga \
	sounds/flite-M/stereo/message-sent-instant.oga \
	sounds/flite-M/stereo/network-connectivity-error.oga \
	sounds/flite-M/stereo/network-connectivity-established.oga \
	sounds/flite-M/stereo/network-connectivity-lost.oga \
	sounds/flite-M/stereo/newmail.oga \
	sounds/flite-M/stereo/newmessage.oga \
	sounds/flite-M/stereo/notebook-tab-changed.oga \
	sounds/flite-M/stereo/phone-failure.oga \
	sounds/flite-M/stereo/phone-hangup.oga \
	sounds/flite-M/stereo/phone-incoming-call.oga \
	sounds/flite-M/stereo/phone-outgoing-busy.oga \
	sounds/flite-M/stereo/phone-outgoing-calling.oga \
	sounds/flite-M/stereo/power-plug.oga \
	sounds/flite-M/stereo/power-unplug-battery-low.oga \
	sounds/flite-M/stereo/power-unplug.oga \
	sounds/flite-M/stereo/ring.oga \
	sounds/flite-M/stereo/screen-brighter.oga \
	sounds/flite-M/stereo/screen-capture-complete.oga \
	sounds/flite-M/stereo/screen-capture.oga \
	sounds/flite-M/stereo/screen-darker.oga \
	sounds/flite-M/stereo/scroll-down-end.oga \
	sounds/flite-M/stereo/scroll-down.oga \
	sounds/flite-M/stereo/scroll-left-end.oga \
	sounds/flite-M/stereo/scroll-left.oga \
	sounds/flite-M/stereo/scroll-right-end.oga \
	sounds/flite-M/stereo/scroll-right.oga \
	sounds/flite-M/stereo/scroll-up-end.oga \
	sounds/flite-M/stereo/scroll-up.oga \
	sounds/flite-M/stereo/search-results-empty.oga \
	sounds/flite-M/stereo/search-results.oga \
	sounds/flite-M/stereo/service-login.oga \
	sounds/flite-M/stereo/service-logout.oga \
	sounds/flite-M/stereo/software-update-available.oga \
	sounds/flite-M/stereo/software-update-urgent.oga \
	sounds/flite-M/stereo/startup.oga \
	sounds/flite-M/stereo/suspend-error.oga \
	sounds/flite-M/stereo/suspend-resume.oga \
	sounds/flite-M/stereo/suspend-start.oga \
	sounds/flite-M/stereo/system-bootup.oga \
	sounds/flite-M/stereo/system-ready.oga \
	sounds/flite-M/stereo/system-shutdown.oga \
	sounds/flite-M/stereo/system-shutdown-reboot.oga \
	sounds/flite-M/stereo/test.oga \
	sounds/flite-M/stereo/thermal-caution.oga \
	sounds/flite-M/stereo/thermal-cool.oga \
	sounds/flite-M/stereo/thermal-hot.oga \
	sounds/flite-M/stereo/tooltip-popdown.oga \
	sounds/flite-M/stereo/tooltip-popup.oga \
	sounds/flite-M/stereo/trash-empty.oga \
	sounds/flite-M/stereo/voicemail.oga \
	sounds/flite-M/stereo/window-attention-active.oga \
	sounds/flite-M/stereo/window-attention-inactive.oga \
	sounds/flite-M/stereo/window-attention.oga \
	sounds/flite-M/stereo/window-close-kill.oga \
	sounds/flite-M/stereo/window-close-kill-process.oga \
	sounds/flite-M/stereo/window-close-kill-server.oga \
	sounds/flite-M/stereo/window-close.oga \
	sounds/flite-M/stereo/window-decorated.oga \
	sounds/flite-M/stereo/window-inactive-click.oga \
	sounds/flite-M/stereo/window-lower-below.oga \
	sounds/flite-M/stereo/window-lower.oga \
	sounds/flite-M/stereo/window-maximized-filled.oga \
	sounds/flite-M/stereo/window-maximized-fullscreen.oga \
	sounds/flite-M/stereo/window-maximized-horizontal.oga \
	sounds/flite-M/stereo/window-maximized-left.oga \
	sounds/flite-M/stereo/window-maximized.oga \
	sounds/flite-M/stereo/window-maximized-right.oga \
	sounds/flite-M/stereo/window-maximized-vertical.oga \
	sounds/flite-M/stereo/window-minimized-hidden.oga \
	sounds/flite-M/stereo/window-minimized.oga \
	sounds/flite-M/stereo/window-move-end-attract.oga \
	sounds/flite-M/stereo/window-move-end.oga \
	sounds/flite-M/stereo/window-move-end-repel.oga \
	sounds/flite-M/stereo/window-move-start.oga \
	sounds/flite-M/stereo/window-move-start-unattract.oga \
	sounds/flite-M/stereo/window-move-start-unrepel.oga \
	sounds/flite-M/stereo/window-new.oga \
	sounds/flite-M/stereo/window-ping.oga \
	sounds/flite-M/stereo/window-question.oga \
	sounds/flite-M/stereo/window-raise-above.oga \
	sounds/flite-M/stereo/window-raise.oga \
	sounds/flite-M/stereo/window-resize-end-attract.oga \
	sounds/flite-M/stereo/window-resize-end.oga \
	sounds/flite-M/stereo/window-resize-end-repel.oga \
	sounds/flite-M/stereo/window-resize-start.oga \
	sounds/flite-M/stereo/window-resize-start-unattract.oga \
	sounds/flite-M/stereo/window-resize-start-unrepel.oga \
	sounds/flite-M/stereo/window-slide-in.oga \
	sounds/flite-M/stereo/window-slide-in-taketo.oga \
	sounds/flite-M/stereo/window-slide-in-unshade.oga \
	sounds/flite-M/stereo/window-slide.oga \
	sounds/flite-M/stereo/window-slide-out.oga \
	sounds/flite-M/stereo/window-slide-out-sendto.oga \
	sounds/flite-M/stereo/window-slide-out-shade.oga \
	sounds/flite-M/stereo/windows-slide.oga \
	sounds/flite-M/stereo/window-stack-lower-below.oga \
	sounds/flite-M/stereo/window-stack-lower.oga \
	sounds/flite-M/stereo/window-stack.oga \
	sounds/flite-M/stereo/window-stack-raise-above.oga \
	sounds/flite-M/stereo/window-stack-raise.oga \
	sounds/flite-M/stereo/window-stick.oga \
	sounds/flite-M/stereo/window-stick-pinned.oga \
	sounds/flite-M/stereo/window-stick-unfloat.oga \
	sounds/flite-M/stereo/window-switch-left.oga \
	sounds/flite-M/stereo/window-switch.oga \
	sounds/flite-M/stereo/window-switch-right.oga \
	sounds/flite-M/stereo/window-switch-zoom.oga \
	sounds/flite-M/stereo/window-undecorated.oga \
	sounds/flite-M/stereo/window-unmaximized-fullscreen.oga \
	sounds/flite-M/stereo/window-unmaximized-horizontal.oga \
	sounds/flite-M/stereo/window-unmaximized-left.oga \
	sounds/flite-M/stereo/window-unmaximized.oga \
	sounds/flite-M/stereo/window-unmaximized-right.oga \
	sounds/flite-M/stereo/window-unmaximized-unfilled.oga \
	sounds/flite-M/stereo/window-unmaximized-vertical.oga \
	sounds/flite-M/stereo/window-unminimized.oga \
	sounds/flite-M/stereo/window-unminimized-unhidden.oga \
	sounds/flite-M/stereo/window-unstick-float.oga \
	sounds/flite-M/stereo/window-unstick.oga \
	sounds/flite-M/stereo/window-unstick-unpinned.oga \
	sounds/flite-M/stereo/window-urgent.oga \
	sounds/flite-M/stereo/workspace-created.oga \
	sounds/flite-M/stereo/workspace-destroyed.oga

nobase_dist_share_DATA += \
	sounds/Incredibles/index.theme

nobase_dist_share_DATA += \
	sounds/Incredibles/stereo/alarm-clock-elapsed.oga \
	sounds/Incredibles/stereo/audio-channel-front-center.oga \
	sounds/Incredibles/stereo/audio-channel-front-left.oga \
	sounds/Incredibles/stereo/audio-channel-front-right.oga \
	sounds/Incredibles/stereo/audio-channel-left.oga \
	sounds/Incredibles/stereo/audio-channel-lfe.oga \
	sounds/Incredibles/stereo/audio-channel-rear-center.oga \
	sounds/Incredibles/stereo/audio-channel-rear-left.oga \
	sounds/Incredibles/stereo/audio-channel-rear-right.oga \
	sounds/Incredibles/stereo/audio-channel-right.oga \
	sounds/Incredibles/stereo/audio-channel-side-left.oga \
	sounds/Incredibles/stereo/audio-channel-side-right.oga \
	sounds/Incredibles/stereo/audio-test-signal.oga \
	sounds/Incredibles/stereo/audio-volume-change.oga \
	sounds/Incredibles/stereo/battery-caution.oga \
	sounds/Incredibles/stereo/battery-full.oga \
	sounds/Incredibles/stereo/battery-low.oga \
	sounds/Incredibles/stereo/bell.oga \
	sounds/Incredibles/stereo/bell-terminal.oga \
	sounds/Incredibles/stereo/bell-window-system.oga \
	sounds/Incredibles/stereo/busytone.oga \
	sounds/Incredibles/stereo/button-pressed.oga \
	sounds/Incredibles/stereo/button-released.oga \
	sounds/Incredibles/stereo/button-toggle-off.oga \
	sounds/Incredibles/stereo/button-toggle-on.oga \
	sounds/Incredibles/stereo/camera-focus.oga \
	sounds/Incredibles/stereo/camera-shutter.oga \
	sounds/Incredibles/stereo/complete-copy.oga \
	sounds/Incredibles/stereo/complete-download.oga \
	sounds/Incredibles/stereo/complete-media-burn.oga \
	sounds/Incredibles/stereo/complete-media.oga \
	sounds/Incredibles/stereo/complete-media-rip.oga \
	sounds/Incredibles/stereo/complete.oga \
	sounds/Incredibles/stereo/complete-print.oga \
	sounds/Incredibles/stereo/complete-scan.oga \
	sounds/Incredibles/stereo/completion-fail.oga \
	sounds/Incredibles/stereo/completion-partial.oga \
	sounds/Incredibles/stereo/completion-rotation.oga \
	sounds/Incredibles/stereo/completion-success.oga \
	sounds/Incredibles/stereo/count-down.oga \
	sounds/Incredibles/stereo/desktop-created.oga \
	sounds/Incredibles/stereo/desktop-destroyed.oga \
	sounds/Incredibles/stereo/desktop-layout-changed.oga \
	sounds/Incredibles/stereo/desktop-login.oga \
	sounds/Incredibles/stereo/desktop-logout.oga \
	sounds/Incredibles/stereo/desktop-mode-floating.oga \
	sounds/Incredibles/stereo/desktop-mode-grid.oga \
	sounds/Incredibles/stereo/desktop-mode-monocle.oga \
	sounds/Incredibles/stereo/desktop-mode.oga \
	sounds/Incredibles/stereo/desktop-mode-tiled-bottom.oga \
	sounds/Incredibles/stereo/desktop-mode-tiled-left.oga \
	sounds/Incredibles/stereo/desktop-mode-tiled.oga \
	sounds/Incredibles/stereo/desktop-mode-tiled-right.oga \
	sounds/Incredibles/stereo/desktop-mode-tiled-top.oga \
	sounds/Incredibles/stereo/desktop-screen-lock.oga \
	sounds/Incredibles/stereo/desktop-screen-unlock.oga \
	sounds/Incredibles/stereo/desktop-session-checkpoint.oga \
	sounds/Incredibles/stereo/desktop-session-create.oga \
	sounds/Incredibles/stereo/desktop-session-restore-failed.oga \
	sounds/Incredibles/stereo/desktop-session-restore.oga \
	sounds/Incredibles/stereo/desktop-session-save-failed.oga \
	sounds/Incredibles/stereo/desktop-session-save.oga \
	sounds/Incredibles/stereo/desktop-showing-hideall.oga \
	sounds/Incredibles/stereo/desktop-showing.oga \
	sounds/Incredibles/stereo/desktop-showing-showall.oga \
	sounds/Incredibles/stereo/desktop-switch-down.oga \
	sounds/Incredibles/stereo/desktop-switch-left.oga \
	sounds/Incredibles/stereo/desktop-switch-left-up.oga \
	sounds/Incredibles/stereo/desktop-switch-right-down.oga \
	sounds/Incredibles/stereo/desktop-switch-right.oga \
	sounds/Incredibles/stereo/desktop-switch-up.oga \
	sounds/Incredibles/stereo/device-added.oga \
	sounds/Incredibles/stereo/device-removed.oga \
	sounds/Incredibles/stereo/dialog-cancel.oga \
	sounds/Incredibles/stereo/dialog-error-critical.oga \
	sounds/Incredibles/stereo/dialog-error.oga \
	sounds/Incredibles/stereo/dialog-error-serious.oga \
	sounds/Incredibles/stereo/dialog-information.oga \
	sounds/Incredibles/stereo/dialog-ok.oga \
	sounds/Incredibles/stereo/dialog-question.oga \
	sounds/Incredibles/stereo/dialog-warning.oga \
	sounds/Incredibles/stereo/dialtone.oga \
	sounds/Incredibles/stereo/drag-accept.oga \
	sounds/Incredibles/stereo/drag-fail.oga \
	sounds/Incredibles/stereo/drag-start.oga \
	sounds/Incredibles/stereo/dummy-message.oga \
	sounds/Incredibles/stereo/expander-toggle-off.oga \
	sounds/Incredibles/stereo/expander-toggle-on.oga \
	sounds/Incredibles/stereo/file-trash.oga \
	sounds/Incredibles/stereo/game-card-shuffle.oga \
	sounds/Incredibles/stereo/game-computer-move.oga \
	sounds/Incredibles/stereo/game-human-move.oga \
	sounds/Incredibles/stereo/game-over-loser.oga \
	sounds/Incredibles/stereo/game-over-winner.oga \
	sounds/Incredibles/stereo/item-deleted.oga \
	sounds/Incredibles/stereo/item-selected.oga \
	sounds/Incredibles/stereo/lid-close.oga \
	sounds/Incredibles/stereo/lid-open.oga \
	sounds/Incredibles/stereo/link-pressed.oga \
	sounds/Incredibles/stereo/link-released.oga \
	sounds/Incredibles/stereo/menu-click.oga \
	sounds/Incredibles/stereo/menu-popdown.oga \
	sounds/Incredibles/stereo/menu-popup.oga \
	sounds/Incredibles/stereo/menu-replace.oga \
	sounds/Incredibles/stereo/message-new-email.oga \
	sounds/Incredibles/stereo/message-new-instant.oga \
	sounds/Incredibles/stereo/message-new.oga \
	sounds/Incredibles/stereo/message-new-voicemail.oga \
	sounds/Incredibles/stereo/message.oga \
	sounds/Incredibles/stereo/message-sent-email.oga \
	sounds/Incredibles/stereo/message-sent-instant.oga \
	sounds/Incredibles/stereo/network-connectivity-error.oga \
	sounds/Incredibles/stereo/network-connectivity-established.oga \
	sounds/Incredibles/stereo/network-connectivity-lost.oga \
	sounds/Incredibles/stereo/newmail.oga \
	sounds/Incredibles/stereo/newmessage.oga \
	sounds/Incredibles/stereo/notebook-tab-changed.oga \
	sounds/Incredibles/stereo/phone-failure.oga \
	sounds/Incredibles/stereo/phone-hangup.oga \
	sounds/Incredibles/stereo/phone-incoming-call.oga \
	sounds/Incredibles/stereo/phone-outgoing-busy.oga \
	sounds/Incredibles/stereo/phone-outgoing-calling.oga \
	sounds/Incredibles/stereo/power-plug.oga \
	sounds/Incredibles/stereo/power-unplug-battery-low.oga \
	sounds/Incredibles/stereo/power-unplug.oga \
	sounds/Incredibles/stereo/ring.oga \
	sounds/Incredibles/stereo/screen-brighter.oga \
	sounds/Incredibles/stereo/screen-capture-complete.oga \
	sounds/Incredibles/stereo/screen-capture.oga \
	sounds/Incredibles/stereo/screen-darker.oga \
	sounds/Incredibles/stereo/scroll-down-end.oga \
	sounds/Incredibles/stereo/scroll-down.oga \
	sounds/Incredibles/stereo/scroll-left-end.oga \
	sounds/Incredibles/stereo/scroll-left.oga \
	sounds/Incredibles/stereo/scroll-right-end.oga \
	sounds/Incredibles/stereo/scroll-right.oga \
	sounds/Incredibles/stereo/scroll-up-end.oga \
	sounds/Incredibles/stereo/scroll-up.oga \
	sounds/Incredibles/stereo/search-results-empty.oga \
	sounds/Incredibles/stereo/search-results.oga \
	sounds/Incredibles/stereo/service-login.oga \
	sounds/Incredibles/stereo/service-logout.oga \
	sounds/Incredibles/stereo/software-update-available.oga \
	sounds/Incredibles/stereo/software-update-urgent.oga \
	sounds/Incredibles/stereo/startup.oga \
	sounds/Incredibles/stereo/suspend-error.oga \
	sounds/Incredibles/stereo/suspend-resume.oga \
	sounds/Incredibles/stereo/suspend-start.oga \
	sounds/Incredibles/stereo/system-bootup.oga \
	sounds/Incredibles/stereo/system-ready.oga \
	sounds/Incredibles/stereo/system-shutdown.oga \
	sounds/Incredibles/stereo/system-shutdown-reboot.oga \
	sounds/Incredibles/stereo/test.oga \
	sounds/Incredibles/stereo/thermal-caution.oga \
	sounds/Incredibles/stereo/thermal-cool.oga \
	sounds/Incredibles/stereo/thermal-hot.oga \
	sounds/Incredibles/stereo/tooltip-popdown.oga \
	sounds/Incredibles/stereo/tooltip-popup.oga \
	sounds/Incredibles/stereo/trash-empty.oga \
	sounds/Incredibles/stereo/voicemail.oga \
	sounds/Incredibles/stereo/window-attention-active.oga \
	sounds/Incredibles/stereo/window-attention-inactive.oga \
	sounds/Incredibles/stereo/window-attention.oga \
	sounds/Incredibles/stereo/window-close-kill.oga \
	sounds/Incredibles/stereo/window-close-kill-process.oga \
	sounds/Incredibles/stereo/window-close-kill-server.oga \
	sounds/Incredibles/stereo/window-close.oga \
	sounds/Incredibles/stereo/window-decorated.oga \
	sounds/Incredibles/stereo/window-inactive-click.oga \
	sounds/Incredibles/stereo/window-lower-below.oga \
	sounds/Incredibles/stereo/window-lower.oga \
	sounds/Incredibles/stereo/window-maximized-filled.oga \
	sounds/Incredibles/stereo/window-maximized-fullscreen.oga \
	sounds/Incredibles/stereo/window-maximized-horizontal.oga \
	sounds/Incredibles/stereo/window-maximized-left.oga \
	sounds/Incredibles/stereo/window-maximized.oga \
	sounds/Incredibles/stereo/window-maximized-right.oga \
	sounds/Incredibles/stereo/window-maximized-vertical.oga \
	sounds/Incredibles/stereo/window-minimized-hidden.oga \
	sounds/Incredibles/stereo/window-minimized.oga \
	sounds/Incredibles/stereo/window-move-end-attract.oga \
	sounds/Incredibles/stereo/window-move-end.oga \
	sounds/Incredibles/stereo/window-move-end-repel.oga \
	sounds/Incredibles/stereo/window-move-start.oga \
	sounds/Incredibles/stereo/window-move-start-unattract.oga \
	sounds/Incredibles/stereo/window-move-start-unrepel.oga \
	sounds/Incredibles/stereo/window-new.oga \
	sounds/Incredibles/stereo/window-ping.oga \
	sounds/Incredibles/stereo/window-question.oga \
	sounds/Incredibles/stereo/window-raise-above.oga \
	sounds/Incredibles/stereo/window-raise.oga \
	sounds/Incredibles/stereo/window-resize-end-attract.oga \
	sounds/Incredibles/stereo/window-resize-end.oga \
	sounds/Incredibles/stereo/window-resize-end-repel.oga \
	sounds/Incredibles/stereo/window-resize-start.oga \
	sounds/Incredibles/stereo/window-resize-start-unattract.oga \
	sounds/Incredibles/stereo/window-resize-start-unrepel.oga \
	sounds/Incredibles/stereo/window-slide-in.oga \
	sounds/Incredibles/stereo/window-slide-in-taketo.oga \
	sounds/Incredibles/stereo/window-slide-in-unshade.oga \
	sounds/Incredibles/stereo/window-slide.oga \
	sounds/Incredibles/stereo/window-slide-out.oga \
	sounds/Incredibles/stereo/window-slide-out-sendto.oga \
	sounds/Incredibles/stereo/window-slide-out-shade.oga \
	sounds/Incredibles/stereo/windows-slide.oga \
	sounds/Incredibles/stereo/window-stack-lower-below.oga \
	sounds/Incredibles/stereo/window-stack-lower.oga \
	sounds/Incredibles/stereo/window-stack.oga \
	sounds/Incredibles/stereo/window-stack-raise-above.oga \
	sounds/Incredibles/stereo/window-stack-raise.oga \
	sounds/Incredibles/stereo/window-stick.oga \
	sounds/Incredibles/stereo/window-stick-pinned.oga \
	sounds/Incredibles/stereo/window-stick-unfloat.oga \
	sounds/Incredibles/stereo/window-switch-left.oga \
	sounds/Incredibles/stereo/window-switch.oga \
	sounds/Incredibles/stereo/window-switch-right.oga \
	sounds/Incredibles/stereo/window-switch-zoom.oga \
	sounds/Incredibles/stereo/window-undecorated.oga \
	sounds/Incredibles/stereo/window-unmaximized-fullscreen.oga \
	sounds/Incredibles/stereo/window-unmaximized-horizontal.oga \
	sounds/Incredibles/stereo/window-unmaximized-left.oga \
	sounds/Incredibles/stereo/window-unmaximized.oga \
	sounds/Incredibles/stereo/window-unmaximized-right.oga \
	sounds/Incredibles/stereo/window-unmaximized-unfilled.oga \
	sounds/Incredibles/stereo/window-unmaximized-vertical.oga \
	sounds/Incredibles/stereo/window-unminimized.oga \
	sounds/Incredibles/stereo/window-unminimized-unhidden.oga \
	sounds/Incredibles/stereo/window-unstick-float.oga \
	sounds/Incredibles/stereo/window-unstick.oga \
	sounds/Incredibles/stereo/window-unstick-unpinned.oga \
	sounds/Incredibles/stereo/window-urgent.oga \
	sounds/Incredibles/stereo/workspace-created.oga \
	sounds/Incredibles/stereo/workspace-destroyed.oga

